--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <header>
     <div id="logo">
-        <img src="logo.png" alt="CARe">
+        <img src="newlogo.png" alt="CARe">
     </div>
     <nav id="main-nav">
         <ul class="horizontal-menu">
