feat: some silization

--- a/index.html
+++ b/index.html
@@ -54,32 +54,24 @@
         <h2>Услуги</h2>
         <ul>
             <li>
-                <article>
-                    <p><b>Замена батареи</b></p>
-                    <p><i>Быстрая замена аккумуляторных блоков</i></p>
-                    <p><ins>4999</ins> <del>9999</del> рублей</p>
-                </article>
+                <p><b>Замена батареи</b></p>
+                <p><i>Быстрая замена аккумуляторных блоков</i></p>
+                <p><ins>4999</ins> <del>9999</del> рублей</p>
             </li>
             <li>
-                <article>
-                    <p><b>Ремонт двигателя</b></p>
-                    <p><i>Восстановление электродвигателей для электромобилей</i></p>
-                    <p><ins>9999</ins> <del>29999</del> рублей</p>
-                </article>
+                <p><b>Ремонт двигателя</b></p>
+                <p><i>Восстановление электродвигателей для электромобилей</i></p>
+                <p><ins>9999</ins> <del>29999</del> рублей</p>
             </li>
             <li>
-                <article>
-                    <p><b>Обновление программного обеспечения</b></p>
-                    <p><i> Установка последней версии ПО</i></p>
-                    <p><ins>999</ins> <del>999</del> рублей</p>
-                </article>
+                <p><b>Обновление программного обеспечения</b></p>
+                <p><i> Установка последней версии ПО</i></p>
+                <p><ins>999</ins> <del>999</del> рублей</p>
             </li>
             <li>
-                <article>
-                    <p><b>Установка дополнительного оборудования</b><strong> (Записываться заранее по телефону)</strong></p>
-                    <p><i>Монтаж аксессуаров и опций электромобиля</i></p>
-                    <p><ins>Цена договорная</ins></p>
-                </article>
+                <p><b>Установка дополнительного оборудования </b><strong>(Записываться заранее по телефону)</strong></p>
+                <p><i>Монтаж аксессуаров и опций электромобиля</i></p>
+                <p><ins>Цена договорная</ins></p>
             </li>
         </ul>
     </section>
@@ -112,7 +104,7 @@
                 <p><b>Электронная почта:</b> care@yandex.ru</p>
             </li>
             <li>
-                <p><b>Телеграм:</b> @CareOfficial</p>
+                <p><b>Телеграм:</b> @careofficial</p>
             </li>
         </ul>
     </section>
