--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CARe</title>
     <link href="main.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" sizes="96x96" href="favicon.ico">
 </head>
 <body>
 
